[package]
name = "balance-error"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-wallet = { git = "https://github.com/iotaledger/wallet.rs", branch = "develop" }
fern-logger = { version = "0.5.0", default-features = false }
tokio = "1.22.0"
log = { version = "0.4.17", default-features = false }